Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71795

QMqttClient issues with stateChanged and errorChanged signals

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.12.0 RC
    • 5.12
    • MQTT
    • None
    • a9e5d36f31878e6a7c1c79137b466a92168134ec (qt/qtmqtt/5.12)

      Connecting to an invalid broker reports only a single state change if the connection fails. On a subsequent call it seems that the internal state has not been reset, since it reports bogus and valid states and errors on connect. See attached example.

        For Gerrit Dashboard: QTBUG-71795
        # Subject Branch Project Status CR V

            mkalinow Maurice Kalinowski
            heimrich Karsten Heimrich
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes