Take transport errors into account

If an error occures during the initial connection request,
this was not reflected in the state changes. Hence, we
close the connection on any type of error occurring.

Change-Id: I871be4600978f403af3637eac1ada70ff6ba06c3
Fixes: QTBUG-71795
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>